Kubernetes/projects/django_project/demoP/k8s/django_yamls/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: django
          image: souravdevopsdev/littlelemon-prod-python:0.0.2
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 30
            periodSeconds: 10
