Kubernetes/projects/django_project/demoP/k8s/django_yamls/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8001        # external service port
      targetPort: 8001  # matches Gunicorn bind port
  type: ClusterIP
