Kubernetes/projects/django_project/demoP/k8s/django_yamls/django-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: django-route
spec:
  to:
    kind: Service
    name: django-service
  port:
    targetPort: 8001   # ✅ corrected to match Service + Gunicorn port
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
